Fixed summary not showing bug.  Improved summary behaviour during unit quantity edits.  Form text and styling.

--- a/styles/Configurator.shared.module.css
+++ b/styles/Configurator.shared.module.css
@@ -58,6 +58,10 @@
 	margin-bottom: 8px;
 }
 
+.configurator .summaryOutOfDate .summaryText {
+	opacity: 0.3;
+}
+
 label.monthsRemaining {
 	display: flex;
 	flex-direction: row;
