--- a/styles/global.css
+++ b/styles/global.css
@@ -185,7 +185,7 @@ form button:active {
 }
 
 form button:disabled {
-	cursor: default;
+	cursor: not-allowed;
 	opacity: 0.2;
 }
 
